need to fix the aligning for reply and change the last the comment card

--- a/style.css
+++ b/style.css
@@ -41,6 +41,14 @@ body{
   display: grid;
   grid-template-columns: 0.3fr 3fr;
 }
+.card-reply{
+  padding: 1.3rem 1.5rem 0.5rem;
+  border-radius: 0.5rem;
+  background-color: hsl(0, 0%, 100%);
+
+  display: grid;
+  grid-template-columns: 0.3fr 3fr;
+}
 .img-profile{
   width: 30px;
 }
@@ -61,9 +69,11 @@ body{
    margin: 0 0 0 20rem;
    color: hsl(238, 40%, 52%);
 }
-.d-flex{
+.d-flex {
   display: flex;
+  justify-content: start;
 }
+
 .description{
   font-size: 16px;
   margin: 1rem 0 0 0;
@@ -92,10 +102,60 @@ body{
 .minus-icon{
   width: 10px;
 }
+/* ***************** */
+/* Comment Reply         */
+/* ***************** */
+.flex-column{
+  position: relative;
+  top: 0;
+  left: 7%;
+  margin-top: 2rem;
+  
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#comment-reply{
+  padding: 0 25rem;
+}
+.column-reply{
+  padding: 1rem 0.5rem;
+  margin: 0 1.5rem 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:1rem;
+
+  background-color: hsl(228, 33%, 97%);
+  border-radius: 0.5rem;
+}
+.comment-reply{
+  margin: 0 0 0 15rem;
+  color: hsl(238, 40%, 52%);
+}
+.reply span{
+  margin: 0 0.3rem;
+}
+.comment-reply span, .comment-reply- span{
+  margin: 0 0.3rem;
+}
+.vl {
+  border-left: 1px solid green;
+  height: 400px;
+  position: absolute;
+  left: 28%;
+  margin-left: -3px;
+  top: 55%;
+}
 
 /* ***************** */
 /* Helpers         */
 /* ***************** */
 .comment-2{
   margin-top: 1rem;
+}
+.comment-reply-{
+  margin: 0 0 0 16rem;
+  color: hsl(238, 40%, 52%);
 }
